tests/positive/Reachability/Data/Bool.juvix
module Data.Bool;

type Bool :=
  | true : Bool
  | false : Bool;

open Bool using {true; false} public;

not : Bool → Bool
  | true := false
  | false := true;
