tests/negative/PragmasDuplicateKeys.juvix
module PragmasDuplicateKeys;

type Bool := true | false;

{-# inline: true, inline: false #-}
main : Bool := true;
